src/nimhdf5/hl/H5LTpublic.nim


proc H5LTget_attribute_ndims*(loc_id: hid_t; obj_name: cstring; attr_name: cstring;
                             rank: ptr cint): herr_t {.cdecl,
    importc: "H5LTget_attribute_ndims", dynlib: libname_hl.}
proc H5LTget_attribute_info*(loc_id: hid_t; obj_name: cstring; attr_name: cstring;
                            dims: ptr hsize_t; type_class: ptr H5T_class_t;
                            type_size: ptr csize): herr_t {.cdecl,
    importc: "H5LTget_attribute_info", dynlib: libname_hl.}
## -------------------------------------------------------------------------
## 
##  General functions
## 
## -------------------------------------------------------------------------
## 

proc H5LTtext_to_dtype*(text: cstring; lang_type: H5LT_lang_t): hid_t {.cdecl,
    importc: "H5LTtext_to_dtype", dynlib: libname_hl.}
proc H5LTdtype_to_text*(dtype: hid_t; str: cstring; lang_type: H5LT_lang_t;
                       len: ptr csize): herr_t {.cdecl, importc: "H5LTdtype_to_text",
    dynlib: libname_hl.}
## -------------------------------------------------------------------------
## 
##  Utility functions
## 
## -------------------------------------------------------------------------
## 

proc H5LTfind_attribute*(loc_id: hid_t; name: cstring): herr_t {.cdecl,
    importc: "H5LTfind_attribute", dynlib: libname_hl.}
proc H5LTpath_valid*(loc_id: hid_t; path: cstring; check_object_valid: hbool_t): htri_t {.
    cdecl, importc: "H5LTpath_valid", dynlib: libname_hl.}
## -------------------------------------------------------------------------
## 
##  File image operations functions
## 
## -------------------------------------------------------------------------
## 

proc H5LTopen_file_image*(buf_ptr: pointer; buf_size: csize; flags: cuint): hid_t {.
    cdecl, importc: "H5LTopen_file_image", dynlib: libname_hl.}
